# LightRAW

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml
docs/: LIBRARY-MANAGEMENT.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  RAPIDRAW-PARITY.md
docs/research/: adobe-bridge-file-management.md  mask-layer-workflows.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: libraw_bridge.c
src-tauri/src/: catalog.rs  export_queue.rs  exporting.rs  file_management.rs  lib.rs  main.rs  path_utils.rs
src-tauri/src/decode/: heif.rs  mod.rs  raster.rs  raw.rs
src/bridge/: catalog.test.ts  catalog.ts  export.ts  file-management.ts  images.ts  presets.ts
src/editor/: basic-adjustments.test.ts  basic-adjustments.ts  detail.test.ts  detail.ts  develop-recipe.test.ts  develop-recipe.ts  geometry.test.ts  geometry.ts  history.test.ts  history.ts  hsl.test.ts  hsl.ts  masks.test.ts  masks.ts  presets.test.ts  presets.ts  tone-curve.test.ts  tone-curve.ts
src/export/: export-options.test.ts  export-options.ts  raster.test.ts  raster.ts
src/renderer/: color-engine.test.ts  color-engine.ts  detail-engine.test.ts  detail-engine.ts  histogram.test.ts  histogram.ts  mask-engine.test.ts  mask-engine.ts  mask-rasterizer.test.ts  mask-rasterizer.ts  preview-renderer.ts  uniforms.test.ts  uniforms.ts
(+28 files in other folders)
